<resources>
    <string name="app_name">Reservante</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_config">Configuración</string>
    <string name="menu_reservas">Reservas pendientes</string>
    <string name="menu_horario">Horario</string>
    <string name="menu_vacaciones">Vacaciones</string>
    <string name="menu_agenda">Agenda</string>

    <string name="datos_configuracion">Datos del restaurante</string>
    <string name="nombre_configuracion">Nombre del restaurante</string>
    <string name="tlf1_configuracion">Teléfono 1</string>
    <string name="tlf2_configuracion">Teléfono 2</string>
    <string name="direccion_configuracion">Dirección</string>
    <string name="salones_configuracion">Salones</string>
    <string name="add_salones_configuracion">Añadir salón</string>
    <string name="correo_configuracion">Correo</string>
    <string name="logo_configuracion">Logo</string>
    <string name="duracion_reservas_configuracion">Duracion de las reservas</string>

    <string name="horario_tarde">Tarde</string>
    <string name="horario_manana">Mañana</string>
    <string name="horario_cerrado">Cerrado</string>

    <string name="horario_lunes">Lunes</string>
    <string name="horario_martes">Martes</string>
    <string name="horario_miercoles">Miércoles</string>
    <string name="horario_jueves">Jueves</string>
    <string name="horario_viernes">Viernes</string>
    <string name="horario_sabado">Sábado</string>
    <string name="horario_domingo">Domingo</string>

    <string name="fecha_inicio">Fecha de inicio</string>
    <string name="fecha_fin">Fecha de fin</string>

    <string name="dialogo_nombre_apellidos">Nombre y apellidos</string>
    <string name="dialogo_nombre">Nombre</string>
    <string name="dialogo_telefono">Teléfono</string>
    <string name="dialogo_email">Email</string>
    <string name="dialogo_comensales">Comensales</string>
    <string name="dialogo_salon">Salón</string>
    <string name="dialogo_observaciones">Observaciones</string>
    <string name="dialogo_cancelar">Cancelar</string>
    <string name="dialogo_guardar">Guardar</string>
    <string name="dialogo_nombre_salon">Nombre del salón</string>
    <string name="dialogo_aforo_salon">Aforo del salón</string>
    <string name="dialogo_usuario">Usuario</string>
    <string name="dialogo_password">Contraseña</string>
    <string name="dialogo_iniciar">Iniciar sesión</string>

    <string name="boton_reservar">Reservar</string>
    <string name="reserva_fecha">Fecha</string>
    <string name="reserva_hora">Hora</string>
    <string name="reserva_recargar">Recargar reservas</string>
</resources>