<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_agenda">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.jabaubo.proyecto_reservas.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_vacaciones"
        android:name="com.jabaubo.proyecto_reservas.ui.vacaciones.VacacionesFragment"
        android:label="@string/menu_vacaciones"
        tools:layout="@layout/fragment_vacaciones" />

    <fragment
        android:id="@+id/nav_reservas"
        android:name="com.jabaubo.proyecto_reservas.ui.reservas.ReservasFragment"
        android:label="@string/menu_reservas"
        tools:layout="@layout/fragment_reservas" />

    <fragment
        android:id="@+id/nav_config"
        android:name="com.jabaubo.proyecto_reservas.ui.config.ConfigFragment"
        android:label="@string/menu_config"
        tools:layout="@layout/fragment_config" />

    <fragment
        android:id="@+id/nav_horario"
        android:name="com.jabaubo.proyecto_reservas.ui.horario.HorarioFragment"
        android:label="@string/menu_horario"
        tools:layout="@layout/fragment_horario" />


    <fragment
        android:id="@+id/nav_agenda"
        android:name="com.jabaubo.proyecto_reservas.ui.reservas_fechas.ReservasFragmentFechas"
        android:label="@string/menu_horario"
        tools:layout="@layout/fragment_reservas_fecha" />

</navigation>