<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btLogin"
        style="@style/Widget.Material3.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginBottom="84dp"
        android:backgroundTint="#6D226D"
        android:backgroundTintMode="add"
        android:text="@string/dialogo_iniciar"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etLoginPassword"
        app:layout_constraintStart_toStartOf="@+id/etLoginPassword"
        app:layout_constraintTop_toBottomOf="@+id/etLoginPassword" />

    <EditText
        android:id="@+id/etLoginUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="83dp"
        android:ems="10"
        android:inputType="text"
        android:text="fulanito"
        app:layout_constraintEnd_toEndOf="@+id/ivLogo"
        app:layout_constraintStart_toStartOf="@+id/ivLogo"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="83dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="fulanito"
        app:layout_constraintEnd_toEndOf="@+id/etLoginUser"
        app:layout_constraintStart_toStartOf="@+id/etLoginUser"
        app:layout_constraintTop_toBottomOf="@+id/etLoginUser" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_nombre_claro" />

    <TextView
        android:id="@+id/tvUsuarioLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialogo_usuario"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/etLoginUser"
        app:layout_constraintStart_toStartOf="@+id/etLoginUser" />

    <TextView
        android:id="@+id/tvPasswordLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialogo_password"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/etLoginPassword"
        app:layout_constraintStart_toStartOf="@+id/etLoginPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>